package mro.fantasy.game.devices.controller;

import mro.fantasy.game.devices.events.GameEventListener;

/**
 * Physical controller of a player.
 *
 * @author Michael Rodenbuecher
 * @since 2022-08-12
 */
public interface PlayerController extends GameEventListener {
}
